hphp/hack/test/typecheck/bad_decl_override.php.exp
File "bad_decl_override.php--file2.php", line 3, characters 7-7:
Class C does not correctly implement all required members  (Typing[4340])
File "bad_decl_override.php--file2.php", line 3, characters 20-20:
Some members are incompatible with those declared in type I
Read the following to see why:
File "bad_decl_override.php--file1.php", line 7, characters 22-22:
Expected E
File "bad_decl_override.php--file2.php", line 4, characters 13-15:
But got int
